packages/react-native/cpp/derec_ffi.h

typedef struct DeRecError {
  int32_t category;
  int32_t code;
  /**
   * Owned C string. Null on success. Released by [`derec_free_error`].
   */
  char *message;
  /**
   * Valid when `code == DEREC_CODE_NON_OK_STATUS`.
   */
  int32_t peer_status;
  /**
   * Owned C string. Null when not applicable. Released by [`derec_free_error`].
   */
  char *peer_memo;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t expected;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t got;
} DeRecError;
typedef struct DeRecBuffer {
  uint8_t *ptr;
  size_t len;
} DeRecBuffer;
typedef struct ProduceVerifyShareRequestMessageResult {
  struct DeRecError error;
  struct DeRecBuffer request_wire_bytes;
} ProduceVerifyShareRequestMessageResult;
typedef struct ExtractVerifyShareRequestResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * Inner `VerifyShareRequestMessage` proto bytes for chaining into
   * [`produce_verify_share_response_message`].
   */
  struct DeRecBuffer request_proto_bytes;
} ExtractVerifyShareRequestResult;
typedef struct ProduceVerifyShareResponseMessageResult {
  struct DeRecError error;
  struct DeRecBuffer response_wire_bytes;
} ProduceVerifyShareResponseMessageResult;
/**
 * `is_valid` is meaningful only on success. Peer rejection surfaces on
 * `error` (see [`crate::interop::ffi::error`]).
 */
typedef struct VerifyShareResponseResult {
  struct DeRecError error;
  bool is_valid;
} VerifyShareResponseResult;
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceVerifyShareRequestMessageResult produce_verify_share_request_message(uint64_t channel_id,
                                                                                   uint64_t secret_id,
                                                                                   uint32_t version,
                                                                                   const uint8_t *shared_key_ptr,
                                                                                   size_t shared_key_len,
                                                                                   const uint8_t *reply_to_ptr,
                                                                                   size_t reply_to_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractVerifyShareRequestResult extract_verify_share_request(const uint8_t *request_ptr,
                                                                    size_t request_len,
                                                                    const uint8_t *shared_key_ptr,
                                                                    size_t shared_key_len);
/**
 * `request_proto_ptr` / `request_proto_len` must be the `request_proto_bytes`
 * returned by [`extract_verify_share_request`].
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceVerifyShareResponseMessageResult produce_verify_share_response_message(uint64_t channel_id,
                                                                                     const uint8_t *request_proto_ptr,
                                                                                     size_t request_proto_len,
                                                                                     const uint8_t *shared_key_ptr,
                                                                                     size_t shared_key_len,
                                                                                     const uint8_t *share_content_ptr,
                                                                                     size_t share_content_len);
/**
 * Verify a `VerifyShareResponseMessage` against the originating
 * `VerifyShareRequestMessage` and the expected share content.
 *
 * `request_proto_ptr` / `request_proto_len` must carry the proto-
 * encoded [`derec_proto::VerifyShareRequestMessage`] the **owner**
 * previously produced for this challenge (kept by the caller in a
 * per-`channel_id` pending-verification map). The primitive
 * rejects any response whose `(nonce, secret_id, version)` triple
 * doesn't match — that's the anti-replay gate.
 *
 * `response_proto_ptr` / `response_proto_len` must be the
 * `response_proto_bytes` returned by [`extract_verify_share_response`].
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct VerifyShareResponseResult process_verify_share_response_message(const uint8_t *request_proto_ptr,
                                                                       size_t request_proto_len,
                                                                       const uint8_t *response_proto_ptr,
                                                                       size_t response_proto_len,
                                                                       const uint8_t *share_content_ptr,
                                                                       size_t share_content_len);